--- a/catalog/templates/catalog/product.html
+++ b/catalog/templates/catalog/product.html
@@ -12,7 +12,7 @@
 
             <ul class="list-unstyled mt-3 mb-4 text-start m-3">
                 <p class="card-text">Категория: {{ object.category }}</p>
-                <li>Описание: {{object.description|title}}</li>
+                <li>Описание: {{object.description}}</li>
                 <br>
                 <li class="card-title pricing-card-title"> Цена: {{object.price|title}} руб.</li>
             </ul>
