--- a/catalog/templates/catalog/home.html
+++ b/catalog/templates/catalog/home.html
@@ -8,10 +8,10 @@
         </div>
         <div class="card-body">
             <ul class="list-unstyled mt-3 mb-4 text-start m-3">
-                <li>{{object.description|title}}</li>
+                <li>{{object.description|slice:":100"}}</li>
             </ul>
             <div class="btn-group">
-                <a class="p-2 btn btn-outline-primary" href="/product/{{ object.pk }}" role="button">Перейти к товарам</a>
+                <a class="p-2 btn btn-outline-primary" href="/product/{{ object.pk }}" role="button">Перейти к товару</a>
             </div>
         </div>
         </div>
