--- a/catalog/templates/catalog/home.html
+++ b/catalog/templates/catalog/home.html
@@ -11,7 +11,7 @@
                 <li>{{object.description|slice:":100"}}</li>
             </ul>
             <div class="btn-group">
-                <a class="p-2 btn btn-outline-primary" href="/product/{{ object.pk }}" role="button">Перейти к товару</a>
+                <a class="p-2 btn btn-outline-primary" href="{% url 'catalog:product_item' object.pk %}" role="button">Перейти к товару</a>
             </div>
         </div>
         </div>
