--- a/blog/templates/blog/blog_list.html
+++ b/blog/templates/blog/blog_list.html
@@ -1,34 +1,37 @@
 {% extends 'catalog/base.html' %}
 
 {% block content %}
+    <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+        <h1 class="display-4">Статьи</h1>
+    </div>
     <div class="col-12 mb-5">
         <a class="btn btn-outline-primary" href="{% url 'blog:create' %}">Создать статью</a>
-       <a class="btn btn-outline-primary" href="{% url 'blog:blog_all_list' %}">Все статьи</a>
+        <a class="btn btn-outline-primary" href="{% url 'blog:blog_all_list' %}">Все статьи</a>
     </div>
     {% for object in object_list %}
-        <div class="col-4 mb-4">
-            <div class="card mb-4 box-shadow">
-                <div class="card-body">
-                    <p class="card-text">
-                        {{ object|title }}
-                    </p>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="btn-group">
-                            <a href="{% url 'blog:blog_detail' object.slug %}"
-                               class="btn btn-sm btn-outline-secondary">View</a>
-                            <a href="{% url 'blog:blog_edit' object.slug %}" type="button"
-                               class="btn btn-sm btn-outline-secondary">Edit</a>
-                            <a href="{% url 'blog:blog_delete' object.slug %}" type="button"
-                               class="btn btn-sm btn-outline-secondary">Delete</a>
-                        </div>
-                        {% if object.is_published %}
-                        <a class="text-danger" href="{% url 'blog:toggle_published' object.slug %}">Снять с публикации</a>
-                        {% else %}
-                         <a class="text-primary" href="{% url 'blog:toggle_published' object.slug %}">Опубликовать</a>
-                        {% endif %}
-                    </div>
+<div class="col-4 mb-4">
+    <div class="card mb-4 box-shadow">
+        <div class="card-body">
+            <p class="card-text">
+                {{ object|title }}
+            </p>
+            <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                    <a href="{% url 'blog:blog_detail' object.slug %}"
+                       class="btn btn-sm btn-outline-secondary">View</a>
+                    <a href="{% url 'blog:blog_edit' object.slug %}" type="button"
+                       class="btn btn-sm btn-outline-secondary">Edit</a>
+                    <a href="{% url 'blog:blog_delete' object.slug %}" type="button"
+                       class="btn btn-sm btn-outline-secondary">Delete</a>
                 </div>
+                {% if object.is_published %}
+                <a class="text-danger" href="{% url 'blog:toggle_published' object.slug %}">Снять с публикации</a>
+                {% else %}
+                <a class="text-primary" href="{% url 'blog:toggle_published' object.slug %}">Опубликовать</a>
+                {% endif %}
             </div>
         </div>
-    {% endfor %}
+    </div>
+</div>
+{% endfor %}
 {% endblock %}
