--- a/catalog/templates/catalog/home.html
+++ b/catalog/templates/catalog/home.html
@@ -1,17 +1,37 @@
 {% extends 'catalog/base.html' %}
 {% block content %}
+<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+    <h1 class="display-4">Каталог</h1>
+</div>
+
+<div class="col-12 mb-5">
+    <a class="btn btn-primary" href="{% url 'catalog:create_product' %}">Добавить продукт</a>
+</div>
 {% for object in object_list %}
 <div class="col-4">
     <div class="card mb-4 box-shadow">
         <div class="card-header">
-            <h4 class="my-0 font-weight-normal">{{object|title}}</h4>
+            <h4 class="my-0 font-weight-normal">
+                {{object|title}}
+            </h4>
         </div>
         <div class="card-body">
             <ul class="list-unstyled mt-3 mb-4 text-start m-3">
                 <li>{{object.description|slice:":100"}}</li>
             </ul>
+            <ul class="list-unstyled mt-3 mb-4 text-start m-3">
+                {% if object.active_version %}
+                    Активная версия: {{ object.active_version.name }}
+                    ({{ object.active_version.number }})
+                {% else %}
+                    Нет активной версии
+                {% endif %}
+            </ul>
             <div class="btn-group">
-                <a class="p-2 btn btn-outline-primary" href="{% url 'catalog:product_item' object.pk %}" role="button">Перейти к товару</a>
+                <a class="btn btn-sm btn-outline-primary" href="{% url 'catalog:product_item' object.pk %}"
+                   role="button">Перейти к товару</a>
+                <a href="{% url 'catalog:update_product' object.pk %}" type="button"
+                   class="btn btn-sm btn-outline-success">Изменить</a>
             </div>
         </div>
         </div>
