--- a/catalog/templates/catalog/product_confirm_delete.html
+++ b/catalog/templates/catalog/product_confirm_delete.html
@@ -4,13 +4,11 @@
     <div class = "col-6">
         <div class = "card">
             <div class="card-body">
-                <form method="post">
+                <form method="post" >
                     {% csrf_token %}
-
-                    <p>Хотите удалить?"{{ object.title }}"</p>
-                    <button type="submit" class="btn btn-success" >Подтвердить
-                        <a href="{% url 'catalog:home' %}" class="btn btn-warning">Отмена</a>
-                    </button>
+                    <p>Хотите удалить? "{{ object.title }}" </p>
+                    <button type="submit" class="btn btn-danger" >Подтвердить</button>
+                    <a href="{% url 'catalog:home' %}" class="btn btn-warning">Отмена</a>
                 </form>
             </div>
         </div>
