--- a/catalog/templates/catalog/product_item.html
+++ b/catalog/templates/catalog/product_item.html
@@ -28,7 +28,7 @@
                 <a href="{% url 'catalog:update_product' object.pk %}" type="button"
                    class="btn btn-sm btn-outline-success">Изменить</a>
                 <a href="{% url 'catalog:delete_product' object.pk %}" type="button"
-                   class="btn btn-sm btn-outline-success">Удалить</a>
+                   class="btn btn-danger">Удалить</a>
                 <a href="{% url 'catalog:home' %}" type="button"
                    class="btn btn-sm btn-outline-success">Назад</a>
             </div>
