--- a/catalog/templates/catalog/product_confirm_delete.html
+++ b/catalog/templates/catalog/product_confirm_delete.html
@@ -6,7 +6,7 @@
             <div class="card-body">
                 <form method="post" >
                     {% csrf_token %}
-                    <p>Хотите удалить? "{{ object.title }}" </p>
+                    <p>Хотите удалить? "{{ object.name }}" </p>
                     <button type="submit" class="btn btn-danger" >Подтвердить</button>
                     <a href="{% url 'catalog:home' %}" class="btn btn-warning">Отмена</a>
                 </form>
