--- a/catalog/templates/catalog/includes/inc_catalog_menu.html
+++ b/catalog/templates/catalog/includes/inc_catalog_menu.html
@@ -2,8 +2,17 @@
     <h5 class="my-0 mr-md-auto font-weight-normal">Skystore</h5>
     <nav class="ms-5">
         <a class="p-2 btn btn-outline-primary" href="{% url 'catalog:home' %}">Каталог</a>
-        <a class="p-2 btn btn-outline-primary" href="{% url 'contacts' %}">Контакты</a>
         <a class="p-2 btn btn-outline-primary" href="{% url 'blog:blog_list' %}">Статьи</a>
+        {% if user.is_authenticated %}
+            <a class="p-2 btn btn-outline-primary" href="{% url 'users:profile' %}">Профиль</a>
+            <form method="post" action="{% url 'users:logout' %}">
+                {% csrf_token %}
+                <button class="p-2 btn btn-outline-primary" type="submit">Выход</button>
+            </form>
+        {% else %}
+             <a class="p-2 btn btn-outline-primary" href="{% url 'users:login' %}">Вход</a>
+             <a class="p-2 btn btn-outline-primary" href="{% url 'users:register' %}">Регистрация</a>
+        {% endif %}
 
     </nav>
 </div>
